--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^6.0.1
   hive: ^2.0.4
   hive_flutter: ^1.1.0
+  smooth_page_indicator: ^1.0.0+2
   flutter_feather_icons: ^2.0.0+1
 
 dev_dependencies:
@@ -57,7 +58,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/onboarding/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
