--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^6.0.1
   hive: ^2.0.4
   hive_flutter: ^1.1.0
+  google_nav_bar: ^5.0.5
   smooth_page_indicator: ^1.0.0+2
   flutter_feather_icons: ^2.0.0+1
 
@@ -60,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/onboarding/
+    - assets/registration/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
