--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   google_nav_bar: ^5.0.5
   smooth_page_indicator: ^1.0.0+2
   flutter_feather_icons: ^2.0.0+1
+  image_picker: ^0.8.4+4
+  path_provider: ^2.0.7
 
 dev_dependencies:
   hive_generator: ^1.1.1
