--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_feather_icons: ^2.0.0+1
   image_picker: ^0.8.4+4
   path_provider: ^2.0.7
+  intl: ^0.17.0
 
 dev_dependencies:
   hive_generator: ^1.1.1
@@ -67,6 +68,7 @@ flutter:
   assets:
     - assets/onboarding/
     - assets/registration/
+    - assets/logo/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
