--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,9 +66,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/logo/
+    - assets/check/
     - assets/onboarding/
     - assets/registration/
-    - assets/logo/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
