--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   share_plus: ^3.0.4
   flutter_local_notifications: ^9.1.5
+  table_calendar: ^3.0.3
 
 dev_dependencies:
   hive_generator: ^1.1.1
