--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^0.8.4+4
   path_provider: ^2.0.7
   intl: ^0.17.0
+  share_plus: ^3.0.4
 
 dev_dependencies:
   hive_generator: ^1.1.1
