--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path_provider: ^2.0.7
   intl: ^0.17.0
   share_plus: ^3.0.4
+  flutter_local_notifications: ^9.1.5
 
 dev_dependencies:
   hive_generator: ^1.1.1
