--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dev_dependencies:
   hive_generator: ^1.1.1
   build_runner: ^2.1.5
   analyzer: ^2.8.0
+  flutter_launcher_icons: "^0.9.2"
   flutter_test:
     sdk: flutter
 
@@ -59,6 +60,12 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/logo/colored.png"
+  remove_alpha_ios: true
 
 # The following section is specific to Flutter.
 flutter:
